--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -63,6 +63,9 @@
           font-family: fantasy;
           text-decoration: none;
           color: gold;
+          position: relative;
+          display: inline-block;
+          text-decoration: none;
           &:hover {
             color: white;
           }
