--- a/app/views/youtubes/show.html.erb
+++ b/app/views/youtubes/show.html.erb
@@ -11,18 +11,18 @@
     <p class="main__image__attention">
       注目動画
     </p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Wt1QA_Uhyao" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2Zjp-vYV-Jk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="main__image__title">
       Pick up 記事
     </p>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://www.yomiuri.co.jp/editorial/20200201-OYT1T50267/"target="_blank">桜を見る会　公文書の管理がずさん過ぎる</a>
+      <a class="main__image__box__link" href="https://headlines.yahoo.co.jp/hl?a=20200205-00000027-mai-soci"target="_blank">食事遅れ水でしのぐ　クルーズ乗客14日間待機</a>
     </div>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://www3.nhk.or.jp/news/html/20200202/k10012269291000.html"target="_blank">中国新型肺炎　状況</a>
+      <a class="main__image__box__link" href="https://headlines.yahoo.co.jp/hl?a=20200205-00000087-kyodonews-soci"target="_blank">クルーズ船運営会社が感染者10人の国籍公表</a>
     </div>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://r25.jp/article/717625855190518371"target="_blank">不倫の東出昌大が恐れる、杏による“第2・第3の暴露”</a>
+      <a class="main__image__box__link" href="https://headlines.yahoo.co.jp/hl?a=20200204-00010006-fnnprimev-soci"target="_blank">マスク求め客が殺到　本当に足りないの？</a>
     </div>
   </div>
 </div>
