--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -125,3 +125,11 @@
   font-family: 'Noto Serif JP';
   font-size: 20px;
 }
+
+.pagination {
+  font-weight: bold;
+  font-family: 'Noto Serif JP';
+  font-size: 20px;
+  padding-top: 40px;
+  padding-left: 500px;
+}
