--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="posts__content__right__bottom">
           <div class="content__right__bottom--userName">
-            <%= post.title %>
+            <%= link_to post.title, post_path(post.id), class: "content__right__bottom--userName__link" %>
           </div>
           <div class="posts__content__right__bottom--date">
             <%= post.youtube_url %>
