--- a/app/assets/stylesheets/_text.scss
+++ b/app/assets/stylesheets/_text.scss
@@ -73,7 +73,7 @@
         font-family: 'Noto Serif JP';
         color: black;
         &:hover {
-          color: white;
+          color: goldenrod;
         }
       }
     }  
