--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -3,7 +3,7 @@
   <% unless post.like_user(current_user.id).blank? %>
     <%= link_to post_like_path(post_id: post.id ,id: post.likes[0].id), method: :delete, remote: true do %>
       <div class="vertical_like">
-        <i class="material-icons red-text">favorite</i>
+        <i class="material-icons red-text">いいね</i>
         <span class="red-text">
           <%= post.likes_count %>
         </span>
@@ -12,7 +12,7 @@
   <% else %>
     <%= link_to post_likes_path(post.id), method: :post, remote: true do %>
       <div class="vertical_like">
-        <i class="material-icons grey-text text-darken-2">favorite_border</i>
+        <i class="material-icons grey-text text-darken-2">いいね</i>
         <span class="grey-text text-darken-2">
           <%= post.likes_count %>
         </span>
@@ -24,14 +24,14 @@
 
   <% if post.likes_count > 0 %>
     <div class="vertical_like">
-      <i class="material-icons red-text">favorite</i>
+      <i class="material-icons red-text">いいね</i>
       <span class="red-text">
         <%= post.likes_count %>
       </span>
     </div>
   <% else %>
     <div class="vertical_like">
-      <i class="material-icons grey-text text-darken-2">favorite_border</i>
+      <i class="material-icons grey-text text-darken-2">いいね</i>
       <span class="grey-text text-darken-2">
         <%= post.likes_count %>
       </span>
