ピックアップ記事修正

--- a/app/views/youtubes/index.html.erb
+++ b/app/views/youtubes/index.html.erb
@@ -19,13 +19,13 @@
       Pick up 記事
     </p>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://www.yomiuri.co.jp/editorial/20200201-OYT1T50267/"target="_blank">桜を見る会　公文書の管理がずさん過ぎる</a>
+      <a class="main__image__box__link" href="https://news.yahoo.co.jp/pickup/6353000"target="_blank">新型肺炎、国内感染者1000人に</a>
     </div>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://www3.nhk.or.jp/news/html/20200202/k10012269291000.html"target="_blank">中国新型肺炎　状況</a>
+      <a class="main__image__box__link" href="https://news.yahoo.co.jp/pickup/6352995"target="_blank">マスク譲り立ち去る　女性感謝</a>
     </div>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://r25.jp/article/717625855190518371"target="_blank">不倫の東出昌大が恐れる、杏による“第2・第3の暴露”</a>
+      <a class="main__image__box__link" href="https://www3.nhk.or.jp/news/html/20200304/k10012312771000.html?utm_int=news_contents_news-main_005"target="_blank">米大統領　日本も渡航制限の可能性示唆</a>
     </div>
   </div>
 </div>
