--- a/app/views/youtubes/show.html.erb
+++ b/app/views/youtubes/show.html.erb
@@ -16,13 +16,13 @@
       Pick up 記事
     </p>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://headlines.yahoo.co.jp/hl?a=20200205-00000027-mai-soci"target="_blank">食事遅れ水でしのぐ　クルーズ乗客14日間待機</a>
+      <a class="main__image__box__link" href="https://www3.nhk.or.jp/news/html/20200302/k10012309571000.html?utm_int=news-ranking_access_list-items_006"target="_blank">南海トラフ地震　津波浸水想定エリアで起きていること</a>
     </div>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://headlines.yahoo.co.jp/hl?a=20200205-00000087-kyodonews-soci"target="_blank">クルーズ船運営会社が感染者10人の国籍公表</a>
+      <a class="main__image__box__link" href="https://www3.nhk.or.jp/news/html/20200302/k10012310301000.html?utm_int=news-ranking_access_list-items_010"target="_blank">日本人をからかい暴行の疑い　パレスチナ人逮捕　現地警察</a>
     </div>
     <div class="main__image__box">
-      <a class="main__image__box__link" href="https://headlines.yahoo.co.jp/hl?a=20200204-00010006-fnnprimev-soci"target="_blank">マスク求め客が殺到　本当に足りないの？</a>
+      <a class="main__image__box__link" href="https://www3.nhk.or.jp/news/html/20200303/k10012312371000.html?utm_int=news-ranking_access_list-items_020"target="_blank">Ｇ７が声明発表 新型ウイルス対応「すべての適切手段用いる」</a>
     </div>
   </div>
 </div>
